<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/expense_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="12dp"
        app:srcCompat="@drawable/ic_add"
        android:contentDescription="@string/image_of_expense" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/expense_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="16sp"
            android:text="@string/description"/>

        <TextView
            android:id="@+id/expense_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/type"/>
    </LinearLayout>

    <TextView
        android:id="@+id/expense_amount"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/amount" />
</LinearLayout>