<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/history_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="8dp"
        app:srcCompat="@drawable/fab_add"
        android:contentDescription="@string/image_history" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/history_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/description" />

        <TextView
            android:id="@+id/history_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type" />
    </LinearLayout>
</LinearLayout>