<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/alert_expense_amount"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/amount"
            android:inputType="number"/>

        <Spinner
            android:id="@+id/alert_expense_type"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:textSize="16sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <EditText
        android:id="@+id/alert_expense_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_below="@+id/linearLayout"
        android:layout_marginEnd="40dp"
        android:hint="@string/description"
        android:lines="2"
        android:textSize="16sp" />

    <Button
        android:id="@+id/alert_expense_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/alert_expense_desc"
        android:layout_below="@+id/alert_expense_desc"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="24dp"
        android:text="@string/add"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/alert_expense_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/alert_expense_add"
        android:layout_toStartOf="@+id/alert_expense_add"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        android:text="@string/cancel" />

</RelativeLayout>